@@ -437,8 +437,10 @@ g_main_set_poll_func
 
 <SUBSECTION>
 g_timeout_source_new
+g_timeout_source_new_seconds
 g_timeout_add
 g_timeout_add_full
+g_timeout_add_seconds
 
 <SUBSECTION>
 g_idle_source_new
