@@ -617,8 +617,10 @@ g_idle_add_full
 g_idle_remove_by_data
 g_idle_source_new
 g_timeout_add
+g_timeout_add_seconds
 g_timeout_add_full
 g_timeout_source_new
+g_timeout_source_new_seconds
 #endif
 #endif
 
